--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ theme = "fodt"
 
 [params]
 splash = "Now Casting"
-tagline = "We're working to build a better alumni association for the theater"
+tagline = "We're working to support the greater DramaTech community"
 
 [markup.goldmark.renderer]
 unsafe = true
