Initial working draft of a new theme.
* Create the new theme and fill it out from prototype
* Add Hugo Pipeline for theme assets
* Translate theme CSS into SCSS
* Add new branding assets
* Copy new content from static version
* Break some of said content up into new pages

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://friendsofdt.org/"
 languageCode = "en-us"
 title = "Friends of DramaTech"
-theme = "fodt"
+theme = "lilac-revenge"
 
 [params]
 splash = "Now Casting"
