--- a/themes/lilac-revenge/theme.toml
+++ b/themes/lilac-revenge/theme.toml
@@ -2,20 +2,14 @@
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
 name = "Lilac Revenge"
-license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
-description = ""
-homepage = "http://example.com/"
+license = "CC-BY-NC-SA"
+licenselink = "https://github.com/FriendsOfDramaTech/friendsofdt.org/blob/master/LICENSE"
+description = "Lilac infused theme for the Friends of DramaTech"
+homepage = "https://github.com/FriendsOfDramaTech/friendsofdt.org"
 tags = []
 features = []
-min_version = "0.41.0 Extended"
+min_version = "0.41.0"
 
 [author]
-  name = ""
-  homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "Friends of Dramatech"
+  homepage = "https://friendsofdt.org"
