News item update
* A little CSS and layout cleanup
* Added shortcode for news list
* Added news lit template
* Added last few newsletters

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,6 +2,7 @@ baseURL = "https://friendsofdt.org/"
 languageCode = "en-us"
 title = "Friends of DramaTech"
 theme = "lilac-revenge"
+enableRobotsTXT = true
 
 [params]
 
