--- a/.github/workflows/publish-staging.yaml
+++ b/.github/workflows/publish-staging.yaml
@@ -6,7 +6,18 @@ on:
 jobs:
   publish-hugo:
     runs-on: ubuntu-latest
+    env:
+      HUGO_ENV: staging
     steps:
+        - name: Configure AWS Credentials
+          uses: aws-actions/configure-aws-credentials@v1
+          with:
+            aws-access-key-id: ${{ secrets.STAGING_DEPLOYMENT_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.STAGING_DEPLOYMENT_SECRET_ACCESS_KEY }}
+            aws-region: us-east-1
+            role-to-assume: ${{ secrets.STAGING_DEPLOYMENT_ROLE_ARN }}
+            role-duration-seconds: 1200
+            role-session-name: StagingHugoPublisherWorkflow
         - uses: actions/checkout@v2
           with:
             submodules: true 
@@ -17,17 +28,6 @@ jobs:
             hugo-version: '0.78.2'
             extended: true
         - name: Build
-          run: | 
-            hugo -e staging --verbose
-        - name: Configure AWS Credentials
-          uses: aws-actions/configure-aws-credentials@v1
-          with:
-            aws-access-key-id: ${{ secrets.STAGING_DEPLOYMENT_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.STAGING_DEPLOYMENT_SECRET_ACCESS_KEY }}
-            aws-region: us-east-1
-            role-to-assume: ${{ secrets.STAGING_DEPLOYMENT_ROLE_ARN }}
-            role-duration-seconds: 1200
-            role-session-name: StagingHugoPublisherWorkflow
-        - name: Deploy hugo
-          run: |
-            hugo deploy -e staging --verbose
+          run: hugo --verbose
+        - name: Deploy
+          run: hugo deploy --verbose
