Fix mainline workflow

--- a/.github/workflows/publish-mainline.yaml
+++ b/.github/workflows/publish-mainline.yaml
@@ -1,8 +1,8 @@
-name: Publish Staging
+name: Publish Mainline
 on:
   push:
     branches:
-      - staging
+      - mainline
 jobs:
   publish-hugo:
     runs-on: ubuntu-latest
