--- a/.github/workflows/publish-staging.yaml
+++ b/.github/workflows/publish-staging.yaml
@@ -28,6 +28,6 @@ jobs:
             hugo-version: '0.79.0'
             extended: true
         - name: Build
-          run: hugo --verbose
+          run: npx tinacms build -c 'hugo --verbose'
         - name: Deploy
           run: hugo deploy --verbose
