--- a/.github/workflows/publish-mainline.yaml
+++ b/.github/workflows/publish-mainline.yaml
@@ -7,8 +7,30 @@ jobs:
   publish-hugo:
     runs-on: ubuntu-latest
     steps:
+        - uses: actions/checkout@v4
+          with:
+            submodules: true 
+            fetch-depth: 0
+        - name: Setup Hugo
+          uses: peaceiris/actions-hugo@v2
+          with:
+            hugo-version: latest
+            extended: true
+        - name: Install Node
+          uses: actions/setup-node@v4
+          id: install-node
+          with:
+            cache: npm
+            cache-dependency-path: '**/package-lock.json'
+        - name: Install Deps
+          run: npm ci
+        - name: Build Tina
+          run: npm exec tinacms build
+          env:
+            NEXT_PUBLIC_TINA_CLIENT_ID: ${{ secrets.TINA_CMS_CLIENT_ID }}
+            TINA_TOKEN: ${{ secrets.TINA_CMS_RO_TOKEN }}
         - name: Configure AWS Credentials
-          uses: aws-actions/configure-aws-credentials@v1
+          uses: aws-actions/configure-aws-credentials@v4
           with:
             aws-access-key-id: ${{ secrets.PROD_DEPLOYMENT_ACCESS_KEY_ID }}
             aws-secret-access-key: ${{ secrets.PROD_DEPLOYMENT_SECRET_ACCESS_KEY }}
@@ -16,16 +38,7 @@ jobs:
             role-to-assume: ${{ secrets.PROD_DEPLOYMENT_ROLE_ARN }}
             role-duration-seconds: 1200
             role-session-name: ProdHugoPublisherWorkflow
-        - uses: actions/checkout@v2
-          with:
-            submodules: true 
-            fetch-depth: 0
-        - name: Setup Hugo
-          uses: peaceiris/actions-hugo@v2
-          with:
-            hugo-version: '0.79.0'
-            extended: true
-        - name: Build
-          run: hugo --verbose
+        - name: Build Hugo
+          run:  hugo --verbose
         - name: Deploy
           run: hugo deploy --verbose
