--- a/.github/workflows/publish-staging.yaml
+++ b/.github/workflows/publish-staging.yaml
@@ -10,7 +10,7 @@ jobs:
       HUGO_ENV: staging
     steps:
         - name: Configure AWS Credentials
-          uses: aws-actions/configure-aws-credentials@v1
+          uses: aws-actions/configure-aws-credentials@v4
           with:
             aws-access-key-id: ${{ secrets.STAGING_DEPLOYMENT_ACCESS_KEY_ID }}
             aws-secret-access-key: ${{ secrets.STAGING_DEPLOYMENT_SECRET_ACCESS_KEY }}
@@ -18,16 +18,29 @@ jobs:
             role-to-assume: ${{ secrets.STAGING_DEPLOYMENT_ROLE_ARN }}
             role-duration-seconds: 1200
             role-session-name: StagingHugoPublisherWorkflow
-        - uses: actions/checkout@v2
+        - uses: actions/checkout@v4
           with:
             submodules: true 
             fetch-depth: 0
         - name: Setup Hugo
           uses: peaceiris/actions-hugo@v2
           with:
-            hugo-version: '0.79.0'
+            hugo-version: latest
             extended: true
-        - name: Build
-          run: hugo --verbose
+        - name: Install Node
+          uses: actions/setup-node@v4
+          id: install-node
+          with:
+            cache: npm
+            cache-dependency-path: '**/package-lock.json'
+        - name: Install Deps
+          run: npm ci
+        - name: Build Tina
+          run: npm exec tinacms build
+          env:
+            NEXT_PUBLIC_TINA_CLIENT_ID: ${{ secrets.TINA_CMS_CLIENT_ID }}
+            TINA_TOKEN: ${{ secrets.TINA_CMS_RO_TOKEN }}
+        - name: Build Hugo
+          run:  hugo --verbose
         - name: Deploy
           run: hugo deploy --verbose
