--- a/.github/workflows/publish-mainline.yaml
+++ b/.github/workflows/publish-mainline.yaml
@@ -6,6 +6,8 @@ on:
 jobs:
   publish-hugo:
     runs-on: ubuntu-latest
+    env:
+        HUGO_STAGE: production
     steps:
         - uses: actions/checkout@v4
           with:
