--- a/.github/workflows/publish-mainline.yaml
+++ b/.github/workflows/publish-mainline.yaml
@@ -7,7 +7,7 @@ jobs:
   publish-hugo:
     runs-on: ubuntu-latest
     env:
-        HUGO_STAGE: production
+        HUGO_ENV: production
     steps:
         - uses: actions/checkout@v4
           with:
