--- a/.github/workflows/publish-staging.yaml
+++ b/.github/workflows/publish-staging.yaml
@@ -7,17 +7,8 @@ jobs:
   publish-hugo:
     runs-on: ubuntu-latest
     env:
-      HUGO_ENV: staging
+      HUGO_ENVIRONMENT: staging
     steps:
-        - name: Configure AWS Credentials
-          uses: aws-actions/configure-aws-credentials@v4
-          with:
-            aws-access-key-id: ${{ secrets.STAGING_DEPLOYMENT_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.STAGING_DEPLOYMENT_SECRET_ACCESS_KEY }}
-            aws-region: us-east-1
-            role-to-assume: ${{ secrets.STAGING_DEPLOYMENT_ROLE_ARN }}
-            role-duration-seconds: 1200
-            role-session-name: StagingHugoPublisherWorkflow
         - uses: actions/checkout@v4
           with:
             submodules: true 
@@ -42,5 +33,14 @@ jobs:
             TINA_TOKEN: ${{ secrets.TINA_CMS_RO_TOKEN }}
         - name: Build Hugo
           run:  hugo --verbose
+        - name: Configure AWS Credentials
+          uses: aws-actions/configure-aws-credentials@v4
+          with:
+            aws-access-key-id: ${{ secrets.STAGING_DEPLOYMENT_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.STAGING_DEPLOYMENT_SECRET_ACCESS_KEY }}
+            aws-region: us-east-1
+            role-to-assume: ${{ secrets.STAGING_DEPLOYMENT_ROLE_ARN }}
+            role-duration-seconds: 1200
+            role-session-name: StagingHugoPublisherWorkflow
         - name: Deploy
           run: hugo deploy --verbose
