(fix) Try and move Hugo config into new format
* Looked at more of the manual

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,10 +1,13 @@
-baseURL = "https://friendsofdt.org/"
+baseURL = "http://localhost/"
 enableRobotsTXT = true
 languageCode = "en-us"
 theme = "lilac-revenge"
 title = "Friends of DramaTech"
+buildDrafts = true
+
 [markup.goldmark.renderer]
 unsafe = true
+
 [params]
 
 [[deployment.matchers]]
