--- a/config/production/deployment.toml
+++ b/config/production/deployment.toml
@@ -1,4 +1,4 @@
-[[targets]]
+[targets]
 name = "aws"
 URL = "s3://www.cloud.friendsofdt.org?region=us-east-1"
 cloudFrontDistributionID = "E3VPAL124UCEMW"
